server/K8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
spec:
  replicas: 1
  revisionHistoryLimit: 1
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
    spec:
      # imagePullSecrets:
      #   - name: acr-auth
      containers:
        - name: api
          image: norrisacr.azurecr.io/recommend-server:latest
          ports:
            - containerPort: 3000
