server/K8s/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
spec:
  replicas: 1
  revisionHistoryLimit: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: norrisacr.azurecr.io/frontend:c98484a3b9a794cca253755828747fbdf3f3d39d
          imagePullPolicy: Always
          ports:
            - containerPort: 80
